--- a/csp-helper/pom.xml
+++ b/csp-helper/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.collectionspace</groupId>
     <artifactId>svcapp</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0</version>
   </parent>
 
   <dependencies>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.collectionspace</groupId>
       <artifactId>csp-api</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>4.0</version>
       <type>jar</type>
     </dependency>
 
