--- a/csp-impl/pom.xml
+++ b/csp-impl/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
+
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,7 @@
 		<!--
 		<dependency>
 			<groupId>org.json</groupId>
-			<artifactId>json</artifactId> 
+			<artifactId>json</artifactId>
 			<version>20080701</version>
 		</dependency>
 		-->
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.collectionspace</groupId>
 			<artifactId>csp-api</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4.0</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
@@ -103,7 +103,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<repositories>
 		<!-- Repository for EL4J modules. -->
 		<repository>
@@ -133,6 +133,6 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-	</repositories>	
+	</repositories>
 
 </project>
