--- a/cspi-installation/pom.xml
+++ b/cspi-installation/pom.xml
@@ -8,19 +8,19 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.collectionspace.services</groupId>
 			<artifactId>org.collectionspace.services.client</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.collectionspace.services</groupId>
 			<artifactId>org.collectionspace.services.common-api</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -87,19 +87,19 @@
 		<dependency>
 			<groupId>org.collectionspace</groupId>
 			<artifactId>cspi-schema</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4.0</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.collectionspace</groupId>
 			<artifactId>cspi-services</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>4.0</version>
 			<type>jar</type>
 		</dependency>
                 <dependency>
 			<groupId>org.collectionspace.services</groupId>
 			<artifactId>org.collectionspace.services.common-api</artifactId>
-                        <version>4.0-SNAPSHOT</version>
+                        <version>4.0</version>
 		</dependency>
 	</dependencies>
 
