--- a/cspi-schema/pom.xml
+++ b/cspi-schema/pom.xml
@@ -5,36 +5,36 @@
   <artifactId>cspi-schema</artifactId>
   <packaging>jar</packaging>
   <name>CSP: Schema</name>
-  
+
     <parent>
     <groupId>org.collectionspace</groupId>
     <artifactId>svcapp</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0</version>
   </parent>
-  
 
-  
+
+
   <dependencies>
-<!-- 
+<!--
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20080701</version>
-    </dependency>  
+    </dependency>
 -->
     <dependency>
       <groupId>org.collectionspace</groupId>
       <artifactId>csp-api</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>4.0</version>
       <type>jar</type>
-    </dependency>  
+    </dependency>
     <dependency>
       <groupId>org.collectionspace</groupId>
       <artifactId>csp-impl</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>4.0</version>
       <type>jar</type>
-    </dependency>  
-    
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -58,24 +58,24 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.6</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.collectionspace</groupId>
       <artifactId>csp-helper</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>4.0</version>
       <type>jar</type>
-    </dependency> 
-    
+    </dependency>
+
         <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.4</version>
       <scope>provided</scope>
     </dependency>
-    
-    
+
+
   </dependencies>
-  
+
   <build>
     <finalName>csp-schema</finalName>
     <plugins>
@@ -97,5 +97,5 @@
       </plugin>
     </plugins>
   </build>
-  
+
 </project>
