--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.collectionspace</groupId>
-  <version>4.0-SNAPSHOT</version>
+  <version>4.0</version>
   <artifactId>svcapp</artifactId>
   <packaging>pom</packaging>
   <name>Root</name>
@@ -24,13 +24,13 @@
     <module>tomcat-main</module>
     <module>war-entry</module>
   </modules>
-  
+
 	<properties>
 		<maven.tomcat.home>/tmp</maven.tomcat.home>
 		<cspace.tool.csmake>csmake</cspace.tool.csmake>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-  
+
   <!-- The CollectionSpace public Maven repository for "snapshot" artifacts -->
   <repositories>
     <repository>
@@ -42,7 +42,7 @@
 		</snapshots>
     </repository>
   </repositories>
-  
+
   <build>
     <testResources>
   	  <!-- default -->
@@ -64,7 +64,7 @@
         <configuration>
             <!-- need more memory than the default for our unit tests -->
             <argLine>-Xmx1050m -Dfile.encoding=UTF8</argLine>
-            
+
           <excludes>
             <exclude>**/TestDummyData.java</exclude>
             <exclude>**/TestGenerateAuthorities.java</exclude>
