DRYD-814: Change maven central urls to https.

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 		<repository>
 			<id>repo1</id>
 			<name>Maven repo1</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -81,13 +81,13 @@
 		<repository>
 			<id>repo2</id>
 			<name>Maven repo2</name>
-			<url>http://repo2.maven.org/maven2</url>
+			<url>https://repo2.maven.org/maven2</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>collectionspace-remote-repos</id>
@@ -108,7 +108,7 @@
 		<pluginRepository>
 			<id>repo1</id>
 			<name>Maven repo1</name>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -116,7 +116,7 @@
 		<pluginRepository>
 			<id>maven repo</id>
 			<name>maven repo</name>
-			<url>http://repo2.maven.org/maven2</url>
+			<url>https://repo2.maven.org/maven2</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -128,7 +128,7 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
-	</pluginRepositories>	
+	</pluginRepositories>
 
 	<dependencyManagement>
 		<dependencies>
@@ -276,8 +276,8 @@
 				<directory>${project.basedir}/src/test/resources</directory>
 				<filtering>true</filtering>
 			</testResource>
-			<!-- make sure that each project's target/test-classes directory will 
-				have default.xml in it; deliberately in top-level pom.xml so as not to have 
+			<!-- make sure that each project's target/test-classes directory will
+				have default.xml in it; deliberately in top-level pom.xml so as not to have
 				references to tomcat-main in child projects -->
 			<testResource>
 				<directory>${project.basedir}/../tomcat-main/src/main/resources</directory>
@@ -312,7 +312,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>			
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
