DRYD-814: Change maven central urls to https.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>svcapp</artifactId>
   <packaging>pom</packaging>
   <name>Root</name>
-  
+
   <modules>
     <module>general-utils</module>
     <module>csp-api</module>
@@ -26,13 +26,13 @@
     <module>tomcat-main</module>
     <module>war-entry</module>
   </modules>
-  
+
 	<properties>
 		<maven.tomcat.home>/tmp</maven.tomcat.home>
 		<cspace.tool.csmake>csmake</cspace.tool.csmake>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-  
+
     <!-- The CollectionSpace public Maven repository for "snapshot" artifacts -->
     <repositories>
         <repository>
@@ -62,7 +62,7 @@
         <repository>
             <id>repo1</id>
             <name>Maven repo1</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -70,7 +70,7 @@
         <repository>
             <id>repo2</id>
             <name>Maven repo2</name>
-            <url>http://repo2.maven.org/maven2</url>
+            <url>https://repo2.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -97,7 +97,7 @@
         <pluginRepository>
             <id>repo1</id>
             <name>Maven repo1</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -105,7 +105,7 @@
         <pluginRepository>
             <id>maven repo</id>
             <name>maven repo</name>
-            <url>http://repo2.maven.org/maven2</url>
+            <url>https://repo2.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -117,8 +117,8 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>    
-  
+    </pluginRepositories>
+
   <build>
     <testResources>
   	  <!-- default -->
@@ -140,7 +140,7 @@
         <configuration>
             <!-- need more memory than the default for our unit tests -->
             <argLine>-Xmx1050m -Dfile.encoding=UTF8</argLine>
-            
+
           <excludes>
             <exclude>**/TestDummyData.java</exclude>
             <exclude>**/TestGenerateAuthorities.java</exclude>
