Upgrade dom4j to 2.1.4.

--- a/tomcat-main/pom.xml
+++ b/tomcat-main/pom.xml
@@ -130,7 +130,7 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<type>jar</type>
 		</dependency>
