--- a/cspi-services/pom.xml
+++ b/cspi-services/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<type>jar</type>
 		</dependency>
