--- a/cspi-webui/pom.xml
+++ b/cspi-webui/pom.xml
@@ -74,7 +74,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<type>jar</type>
 		</dependency>
