--- a/jxutils/pom.xml
+++ b/jxutils/pom.xml
@@ -17,7 +17,7 @@
 			<artifactId>json</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 		</dependency>
 		<dependency>
