--- a/pom.xml
+++ b/pom.xml
@@ -155,9 +155,9 @@
 				<version>20230227</version>
 			</dependency>
 			<dependency>
-				<groupId>dom4j</groupId>
+				<groupId>org.dom4j</groupId>
 				<artifactId>dom4j</artifactId>
-				<version>1.6.1</version>
+				<version>2.1.4</version>
 				<type>jar</type>
 			</dependency>
 			<dependency>
