--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<name>Root</name>
 
 	<properties>
-		<revision>8.0.0</revision>
+		<revision>8.1.0-SNAPSHOT</revision>
 		<cspace.services.version>${revision}</cspace.services.version>
 		<temp.war.location>${basedir}/tmp</temp.war.location>
 		<cspace.tool.csmake>csmake</cspace.tool.csmake>
